# django-ecommerce

./: .gitignore  db.sqlite3  main.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_userprofile.py
carts/: admin.py  context_processors.py  models.py  urls.py  views.py
carts/migrations/: 0001_initial.py  0002_alter_cartitem_options_alter_cartitem_user.py
category/: admin.py  models.py
category/migrations/: 0001_initial.py  0002_alter_category_options.py  0002_alter_category_slug.py  0003_categorybatch_category_created_at_and_more.py  0004_remove_category_category_batch_delete_categorybatch.py
greatcart/: settings.py  urls.py  views.py
orders/: admin.py  models.py  sslcommerz.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_paymentgatewaysettings.py
src/css/: materialdesignicons.css
store/: admin.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py
templates/: base.html  home.html
templates/accounts/: dashboard.html  edit_profile.html  login.html  order_detail.html  register.html  resetPassword.html
templates/includes/: alerts.html  footer.html  navbar.html
templates/orders/: payments.html
templates/store/: cart.html  product_detail.html  store.html
