[project]
name = "django-cart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "django-admin-thumbnails>=0.2.9",
    "djlint>=1.36.4",
    "pillow>=11.2.1",
    "python-decouple>=3.8",
    "requests>=2.32.3",
    "sslcommerz-lib>=1.0",
]
